static/ui-kit/custom/scss/basic-io-layout.scss
@import 'common/variables';

.aix-row > div {
  padding-right: 16px;
  &:last-of-type {
    padding-left: 16px;
  }
}

.aix-invisible {
  display: none !important;
}

/*
* Basic IO layout start
*/

.aix-result-content {
  padding: $padding-small $padding-medium $padding-small $padding-medium;
  border: 1px solid #d6d6d6;
  border-radius: 4px;
  height: 470px;
  margin-bottom: $padding-medium;
  overflow-y: auto;
  & p {
    font-size: 32px;
    letter-spacing: -1px;
    line-height: 48px;
    font-weight: 300;
  }
}

.aix-result-content--legend {
  background-color: $light-gray;
  padding: $padding-large;
  border: none;
  & h4 {
    font-weight: 600;
    flex-grow: 1;
    margin-bottom: $padding-medium;
  }
}

.aix-textarea {
  margin-bottom: $padding-medium;
  height: 470px !important;
  > textarea {
    margin-top: 0 !important;
    padding: $padding-small $padding-medium $padding-small $padding-medium;
    height: 470px !important;
    font-size: 32px;
    letter-spacing: -1px;
    line-height: 48px;
    font-weight: 300;
    &:disabled {
      background-color: white;
      color: $dark-gray;
    }
  }
}

.aix-button {
  height: 48px;
  display: flex;
  justify-content: center;
}

.aix-button--processing {
  background-color: #1781e3 !important;
}

/*
* Basic IO layout end
*/

/*
* Samples start
*/

.sample-container {
  padding: $padding-large $padding-large 0 $padding-large;
}

.sample-container__header {
  display: flex;
  > h4 {
    font-weight: 600;
    flex-grow: 1;
    margin-bottom: $padding-medium;
  }
}

.sample-box {
  padding: $padding-medium;
  font-size: 14px;
  line-height: 18px;
  border: 1px solid $gray;
  border-radius: 5px;
  height: 88px;
  margin-bottom: $padding-medium;
  cursor: pointer;

  &:hover {
    background-color: $light-blue;
  }
}

.btn-sample-refresh {
  cursor: pointer;
}

.sample-data-loader {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 416px;
}

/*
* Samples end
*/

/*
* Ellipsis loader in button start
*/

@keyframes blink {
  0% {
    opacity: 0.3;
  }
  20% {
    opacity: 0.9;
  }
  100% {
    opacity: 0.2;
  }
}

.ellipsis-loader {
  display: flex;
  > div {
    animation-name: blink;
    animation-duration: 1.6s;
    animation-iteration-count: infinite;
    animation-fill-mode: both;
    height: 10px;
    width: 10px;
    border-radius: 50%;
    margin-right: 10px;
    background-color: #fff;
  }
  > div:nth-child(2) {
    animation-delay: 0.2s;
  }
  > div:nth-child(3) {
    animation-delay: 0.4s;
    margin: 0;
  }
}

/*
* Ellipsis loader in button end
*/

/*
* Legend start
*/

.aix-legend {
  font-size: 18px;
  margin-bottom: $padding-medium;
  > span {
    display: flex;
    align-items: center;
  }
  i {
    font-size: 20px;
    padding-right: $padding-small;
  }
}

.aix-legend-item-description {
  padding-left: 28px;
}

/*
* Legend end
*/

